--- a/Source_Code/json_files/user_config.yaml
+++ b/Source_Code/json_files/user_config.yaml
@@ -35,6 +35,7 @@ THRESHOLD: 0
 # → Modify "serialized_neurons" to specify how many neurons each inferred layer will synthesize in hardware.
 # → In case "serial_layers" is 1, writing "max" as the first element of the list will infer the neurons of the biggest layer in the net
 #   → ("serialized_neurons" must always be a list).
+#     → Writing "max" or explicitly writing the maximum number on neurons of the biggest layer will produce 2 different architectures.
 # → The parameter "serialized_neurons" must have a number of entries equal to the number specified in "serial_layers".
 # → Be careful not to exceed the amount of neurons of the corresponding layers when modifying "serialized_neurons"
 #   → (ex. writing 17 for a layer that is modeled to have 12 neurons is illegal).
@@ -45,24 +46,25 @@ THRESHOLD: 0
 
 # → The "weight_file" parameter lets you choose whether the data for the weights and biases of the net should be stored in constant arrays,
 #   → or have a dedicated memory (BRAM/ROM).
+
 # → The "weight_file" parameter must be set to "true" or "false" only when the "is_serialized" parameter or the "handshake" parameter is set to "true",
 #   → otherwise it must be left to "true".
-
+#      → true if you want weights as constants, false otherwise
 # → The "handshake" parameter enables neurons and layers to coordinate their execution by signaling when to start and when processing is complete.
 # → Keep "handshake" always "true" when you want to have more than one serialized layer ("serial_layers > 1"),
 #   → or if you want the BRAM block for the weight in your implementation.
 
-is_serialized: true
+is_serialized: false
 
-serial_layers: 1
+serial_layers: null
 
-layer_reuses: max
+layer_reuses: null
 
 serialized_neurons:
-  - 1
+  - null
 
-different_files: null
+different_files: true
 
-weight_file: false
+weight_file: true
 
 handshake: true
